# compsh

./: Compsh.hs  Test.hs  compsh.cabal
